# login-client

./: Cargo.toml  README.md  build.rs  config.json
src/: application.rs  auth0_login.rs  login_panel.rs  main.rs  main_window.rs
src/core/: config.rs  mod.rs  oidc.rs
test_app/: Cargo.toml
test_app/src/: main.rs
ui/: launching_panel.slint  loading_panel.slint  login_panel.slint  main_window.slint
