[package]
name = "login-client"
version = "0.1.0"
authors = ["wagnrd"]
edition = "2021"
build = "build.rs"

[workspace]
members = ["./test_app"]

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
execute = "0.2.12"
slint = "1.0"

[build-dependencies]
slint-build = "1.0"
