[package]
name = "login-client"
version = "0.1.0"
authors = ["wagnrd"]
edition = "2021"
build = "build.rs"

[workspace]
members = ["./test_app"]

[dependencies]
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
execute = "0.2.12"
iced = "0.9"
