[package]
name = "login-client"
version = "0.1.0"
authors = ["wagnrd"]
edition = "2021"
build = "build.rs"

[workspace]
members = ["./test_app"]

[dependencies]
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
execute = "0.2.12"
relm4 = { version = "0.6.0-beta.1", features = ["libadwaita", "adw", "gnome_44"] }
relm4-components = "0.6.0-beta.1"
